feat(sqs): implement MessageMoveTask tracking, cancel, and validation
StartMessageMoveTask was a synchronous drain that returned a throwaway
task handle. ListMessageMoveTasks always returned [] and
CancelMessageMoveTask was not implemented at all. This change keeps
the synchronous-move semantics but introduces a per-account in-memory
task store and proper validation around the API.

Changes
-------
- Add SqsService.MoveTask record (handle, source, destination, max
  rate, status, counters, timestamps, failure reason).
- ConcurrentHashMap<taskHandle, MoveTask> retained for the lifetime
  of the process so List/Cancel can find tasks that have already
  completed.
- StartMessageMoveTask:
  * Accepts MaxNumberOfMessagesPerSecond and stores it on the task.
  * Validates source ARN parses and queue exists (NonExistentQueue).
  * Validates source is referenced as a DLQ by at least one other
    queue's RedrivePolicy; otherwise throws InvalidParameterValue.
  * Validates destination queue exists when provided; otherwise
    throws ResourceNotFoundException (was a generic AmazonSQSException).
  * Rejects a second concurrent task on the same source with
    UnsupportedOperation.
- ListMessageMoveTasks returns tasks for the given source, newest
  first, capped by MaxResults.
- CancelMessageMoveTask marks the task CANCELLED and returns
  ApproximateNumberOfMessagesMoved; ResourceNotFoundException for
  unknown handles.
- Both JSON 1.0 and Query handlers wired through; CancelMessageMoveTask
  dispatch added to both.

Known follow-ups
----------------
- StartMessageMoveTask with no DestinationArn currently drops drained
  messages; AWS semantics is "return each message to its original
  source queue", which requires tracking per-message origin on the
  DLQ side. Left for a future change.